# Robotics

./: .gitignore  README.md  pyproject.toml
camera_agent/: .env.example  README.md  pyproject.toml
camera_agent/src/camera_agent/: agent.py  main.py  tools.py
firmware/apps/: README.md
firmware/apps/BleApiServerDemo/: platformio.ini
firmware/apps/CameraBLE/: README.md  platformio.ini
firmware/apps/CameraWebServerDemo/: platformio.ini
firmware/apps/ConfigStoreDemo/: platformio.ini
firmware/apps/MoistureMonitorDemo/: platformio.ini
firmware/apps/MoisturePump/: README.md  platformio.ini
firmware/apps/MultiSensor/: README.md  platformio.ini
firmware/apps/StatusDashboardDemo/: platformio.ini
firmware/apps/StatusPanel/: README.md  platformio.ini
firmware/apps/TimedCycleControllerDemo/: platformio.ini
firmware/device_drivers/: README.md
firmware/device_drivers/AdcController/: README.md  library.json
firmware/device_drivers/CameraBluetoothServer/: README.md  library.json
firmware/device_drivers/CameraController/: README.md  library.json
firmware/device_drivers/DisplayController/: README.md  library.json
firmware/device_drivers/LedRGBController/: README.md  library.json
firmware/device_drivers/MoistureSensorController/: README.md  library.json
firmware/device_drivers/RelayController/: README.md  library.json
firmware/device_drivers/StorageController/: README.md  library.json
firmware/services/: README.md
firmware/services/BleApiServer/: README.md  library.json
firmware/services/ConfigStore/: README.md  (+1 more)
python-libs/: README.md  pyproject.toml
python-libs/embedded_system_services/: __init__.py
python-libs/embedded_system_services/ble_api/: __init__.py  client.py
python-libs/embedded_system_services/camera_ble/: __init__.py  client.py
test/host/: README.md  pyproject.toml  test_ble_api.py  test_camera_ble.py
(+46 files in other folders)
