[project]
name = "robotics-firmware"
version = "1.0.0"
description = "ESP32-S3 firmware apps — PlatformIO build with uv"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "platformio>=6.1",
    "pyyaml",
]
